--- a/DSI2016Server/.project
+++ b/DSI2016Server/.project
@@ -4,6 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>DSI2016EJB</project>
+		<project>DSI2016WEB</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
